# jayonthegreen.github.io

./: .env.example  .gitignore  .jekyll-metadata  1  404.html  CLAUDE.md  README.md  Rakefile  _config.yml  about.md  app-118cede52ab9f7d06cd9.js  app-118cede52ab9f7d06cd9.js.map  app-3b88706a04778b69d878.js  app-3b88706a04778b69d878.js.map  app-3cacb78168edbb3dcecb.js  app-3cacb78168edbb3dcecb.js.map  app-5cc1cc3473afb78f4ccd.js  app-5cc1cc3473afb78f4ccd.js.map  app-89adf0ef6a8e3e1a8f2a.js  app-89adf0ef6a8e3e1a8f2a.js.map  app-8a3977e7bbafea6751af.js  app-8a3977e7bbafea6751af.js.map  app-a44fb603c33e85daaaba.js  app-a44fb603c33e85daaaba.js.map  app-b7066dbf86ec5b0848d0.js  app-b7066dbf86ec5b0848d0.js.map  app-bd67588b05ecdd072142.js  app-bd67588b05ecdd072142.js.map  app-bf4638571f54d070ae7c.js  app-bf4638571f54d070ae7c.js.map  app-c528cb22f252d4d242a4.js  app-c528cb22f252d4d242a4.js.map  app-cc43980209f518e4760f.js  app-cc43980209f518e4760f.js.map  app-cd267e4f627e9a4f03a3.js  app-cd267e4f627e9a4f03a3.js.map  astro.config.mjs  build-js-styles.css  chunk-manifest.json  chunk-map.json  (+174 more)
.circleci/: config.yml
.dependabot/: config.yml
.github/: dependabot.yml
404/: index.html
_drafts/: 2017-08-13-micro.md  2017-08-15-value-investment-korea.md  2017-09-18-intellectual-capital.md  2017-10-22-common-stocks-and-uncommon-profits.md  imperative-vs-declaritive.md
_includes/: footer.html
_layouts/: categories.html
_posts/: 2015-04-01-movie-big-fish.md  2016-02-01-movie-orange.md  2016-05-14-movie-The Lives of Others.md  2016-05-23-movie-contact.md  2017-06-05-deny-hope.md  (+10 more)
(+3123 files in other folders)
